syntax = "proto3";

package protos;

option go_package = "gRPC-Streaming-Data-Transfer-App/main_task/protos";

message LoginMessage {
  string username = 1;
  string password = 2;
}

message StartStreamMessage {
  int32 interval_ms = 1;
}

message Number {
  int32 value = 1;
  int64 timestamp = 2;
}

message Empty {}

message StopStreamMessage{
  string message = 1;
}

service NumberStream {
  rpc Connect(LoginMessage) returns (Empty);
  rpc StartStream(StartStreamMessage) returns (stream Number);
  rpc StopStream(StopStreamMessage) returns (Empty);
}